--- a/directivos.html
+++ b/directivos.html
@@ -85,29 +85,29 @@
                             <td>Murillo Osorio</td>
                             <td>65.761.240</td>
                         </tr>
-                        <!-- <tr>
-                            <td>Fiscal</td>
-                            <td>Camila Andrea</td>
-                            <td>Camacho Bohorquez</td>
-                            <td>1.019.052.845</td>
-                        </tr> -->
                         <tr>
                             <td>Secretaria suplente</td>
-                            <td>Omaira</td>
-                            <td>Rivera Amezquita</td>
-                            <td>28.599.705</td>
+                            <td>Luz Estela</td>
+                            <td>Briñez de Camacho</td>
+                            <td>38.228.509</td>
                         </tr>
                         <tr>
                             <td>Vocal 1</td>
-                            <td>Bernando</td>
-                            <td>Murillo</td>
-                            <td>18.930.517</td>
+                            <td>Maribel</td>
+                            <td>Agudelo</td>
+                            <td>65.498.696</td>
                         </tr>
                         <tr>
                             <td>Vocal 2</td>
-                            <td>Luz Estella</td>
-                            <td>Briñez de Camacho</td>
-                            <td>38.228.509</td>
+                            <td>Raúl</td>
+                            <td>López Ramírez</td>
+                            <td>14.272.716</td>
+                        </tr>
+                        <tr>
+                            <td>Fiscal</td>
+                            <td>Omaira</td>
+                            <td>Rivera Amezquita</td>
+                            <td>28.599.705</td>
                         </tr>
                     </tbody>
                 </table>
@@ -121,7 +121,7 @@
                 <div class="row reservados justify-content-sm-between align-items-sm-center">
                     <div class="col-12">
                         <img class="mb-2" src="img/logo.png" alt="" width="120" height="120">
-                        <p>©2022. Todos los derechos reservados. <hr>Desarrollado por <a href="https://twitter.com/jhon1946">@jhon1946</a></p>
+                        <p>©2025. Todos los derechos reservados. <hr>Desarrollado por <a href="https://twitter.com/jhon1946">@jhon1946</a></p>
                     </div>
 
                     <!-- <div class="col-12 col-sm-auto">
