--- a/esal.html
+++ b/esal.html
@@ -69,10 +69,10 @@
                     <li><p class="text-justify"><a class="venobox" data-vbtype="inline" data-title="Cerficado Obligaciones Asobanar2021" href="#certificado-content">El certificado del representante legal o revisor fiscal, junto con la declaración de renta donde se evidencie que han cumplido con todos los requisitos durante el respectivo año, cuando corresponda.</a></p></li>
                     <li><p class="text-justify"><a class="venobox" data-vbtype="inline" data-title="Recursos de cooperación ASOBANAR" href="#recursos-content">Los recursos de cooperación internacional no reembolsable que reciban o ejecuten.</a></p></li>
                 <h6 class="font-weight-bold text-primary text-justify">Adicionalmente presentamos:</h6>
-                    <li><p class="text-justify"><a class="venobox" data-vbtype="inline" data-title="Certificado Camara de Comercio ASOBANAR" href="#camara-content">Certificado Camara de Comercio Actualizado 2024</a></p></li>
+                    <li><p class="text-justify"><a class="venobox" data-vbtype="inline" data-title="Certificado Camara de Comercio ASOBANAR" href="#camara-content">Certificado Camara de Comercio Actualizado 2025</a></p></li>
                     <li><p class="text-justify"><a class="venobox" data-vbtype="inline" data-title="Nota Estados Financieros ASOBANAR" href="#notaEstados-content">Nota a los Estados financieros</a></p></li>
                     <li><p class="text-justify"><a class="venobox" data-vbtype="inline" data-title="Estados Flujo Efectivo ASOBANAR" href="#notaEfectivo-content">Estado de flujo del efectivo</a></p></li>
-                    <li><p class="text-justify"><a class="venobox" data-vbtype="inline" data-title="Certificación Estados Financieros ASOBANAR" href="#certificadoEF-content">Certificación Estados Financieros a corte 31/12/2022 por el contador público</a></p></li>
+                    <li><p class="text-justify"><a class="venobox" data-vbtype="inline" data-title="Certificación Estados Financieros ASOBANAR" href="#certificadoEF-content">Certificación Estados Financieros a corte 31/12/2024 por el contador público</a></p></li>
                     <li><p class="text-justify"><a class="venobox" data-vbtype="inline" data-title="Certificación Antecedentes Judiciales ASOBANAR" href="#certificadoAntecedentes-content">Certificado de los antecedentes judiciales y declaración de caducidad de contratos estatales Numeral 3 Art. 364-3 E.T.</a></p></li>
             </ol>
             </div>
@@ -103,9 +103,9 @@
         <div id="beneficio-content" style="display:none;">
             <div class="container text-center pt-2">
                 <h4 class="font-weight-bold text-verde">Destino de la reinversión</h4>
-                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">Anexamos certificación de reinversión para el año gravable 2021.</h6>
-                <object data="files/reinversion2023.pdf" type="application/pdf" width="100%" height="600px">
-                    Descargue el documento <a href="files/reinversion2023.pdf">aquí. <i class="far fa-file-pdf"></i></a>
+                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">Anexamos certificación de reinversión para el año gravable 2024.</h6>
+                <object data="files/reinversion2024.pdf" type="application/pdf" width="100%" height="600px">
+                    Descargue el documento <a href="files/reinversion2024.pdf">aquí. <i class="far fa-file-pdf"></i></a>
                 </object>
             </div>
         </div>
@@ -149,15 +149,15 @@
                         </tr>
                         <tr>
                             <td>Secretaria suplente</td>
-                            <td>Luz Marina</td>
-                            <td>Aguirre Rubio</td>
-                            <td>65.495.096 de Armero</td>
+                            <td>Luz Estela</td>
+                            <td>Briñez de Camacho</td>
+                            <td>38.228.509 de Ibagué</td>
                         </tr>
                         <tr>
                             <td>Vocal</td>
-                            <td>Yesid</td>
-                            <td>Montana Morales</td>
-                            <td>14.265.686 de Armero</td>
+                            <td>Maribel</td>
+                            <td>Agudelo</td>
+                            <td>65.498.696 de Armero</td>
                         </tr>
                         <tr>
                             <td>Fiscal</td>
@@ -179,7 +179,7 @@
         <div id="asignaciones-content" style="display:none;">
             <div class="container text-center pt-2">
                 <h4 class="font-weight-bold text-verde">Asignaciones Permanentes</h4>
-                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">En cuanto a las asignaciones permanentes, la Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa “ASOBANAR”, <strong>No se realizó ninguna asignación permanente</strong> para el año gravable del 2023, ni hay plazos adicionales autorizados por el máximo órgano social.</h6>
+                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">En cuanto a las asignaciones permanentes, la Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa “ASOBANAR”, <strong>No se realizó ninguna asignación permanente</strong> para el año gravable del 2024, ni hay plazos adicionales autorizados por el máximo órgano social.</h6>
                 </div>
             </div>
 
@@ -409,7 +409,7 @@
         <div id="patrimonio-content" style="display:none;">
             <div class="container text-center pt-2">
                 <h4 class="font-weight-bold text-verde">Patrimonio</h4>
-                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">De acuerdo con el estado de situación financiera para el 31 de diciembre del 2023, el valor es de <strong>$247.383.624</strong></h6>
+                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">De acuerdo con el estado de situación financiera para el 31 de diciembre del 2024, el valor es de <strong>$251.775.965</strong></h6>
                 <object data="files/patrimonio2024.pdf" type="application/pdf" width="100%" height="600px">
                     Descargue el documento <a href="files/patrimonio2024.pdf">aquí. <i class="far fa-file-pdf"></i></a>
                 </object>
@@ -419,13 +419,13 @@
         <div id="donaciones-content" style="display:none;">
             <div class="container text-center pt-2">
                 <h4 class="font-weight-bold text-verde">Donaciones</h4>
-                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, no recibió ningún tipo de donación para el año gravable 2023.</h6>
+                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, no recibió ningún tipo de donación para el año gravable 2024.</h6>
             </div>
         </div>
 
         <div id="informe-content" style="display:none;">
             <div class="container text-center pt-2">
-                <h4 class="font-weight-bold text-verde">Informe Anual 2023</h4>
+                <h4 class="font-weight-bold text-verde">Informe Anual 2024</h4>
                 <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta su informe anual por el año 2023</h6>
                 <object data="files/informe2023.pdf" type="application/pdf" width="100%" height="600px">
                     Descargue el documento <a href="files/informe2023.pdf">aquí. <i class="far fa-file-pdf"></i></a>
@@ -436,7 +436,7 @@
         <div id="estados-content" style="display:none;">
             <div class="container text-center pt-2">
                 <h4 class="font-weight-bold text-verde">Estados Financieros</h4>
-                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta sus estados financieros al 31 de diciembre de 2023</h6>
+                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta sus estados financieros al 31 de diciembre de 2024</h6>
                 <object data="files/estadosFinancieros2024.pdf" type="application/pdf" width="100%" height="600px">
                     Descargue el documento <a href="files/estadosFinancieros2024.pdf">aquí. <i class="far fa-file-pdf"></i></a>
                 </object>
@@ -446,9 +446,9 @@
         <div id="certificado-content" style="display:none;">
             <div class="container text-center pt-2">
                 <h4 class="font-weight-bold text-verde">Certificado de Cumplimiento</h4>
-                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">El representante legal de la Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta la certificación de cumplimiento de las obligaciones durante el año 2022</h6>
-                <object data="files/certificado2023.pdf" type="application/pdf" width="100%" height="600px">
-                    Descargue el documento <a href="files/certificado2023.pdf">aquí. <i class="far fa-file-pdf"></i></a>
+                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">El representante legal de la Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta la certificación de cumplimiento de las obligaciones durante el año 2024</h6>
+                <object data="files/certificado2024.pdf" type="application/pdf" width="100%" height="600px">
+                    Descargue el documento <a href="files/certificado2024.pdf">aquí. <i class="far fa-file-pdf"></i></a>
                 </object>
             </div>
         </div>
@@ -462,7 +462,7 @@
 
         <div id="camara-content" style="display:none;">
             <div class="container text-center pt-2">
-                <h4 class="font-weight-bold text-verde">Camara de Comercio 2024</h4>
+                <h4 class="font-weight-bold text-verde">Camara de Comercio 2025</h4>
                 <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta su Camara de Comercio actualizada año 2024</h6>
                 <object data="files/camara.pdf" type="application/pdf" width="100%" height="600px">
                     Descargue el documento <a href="files/camara.pdf">aquí. <i class="far fa-file-pdf"></i></a>
@@ -473,7 +473,7 @@
         <div id="notaEstados-content" style="display:none;">
             <div class="container text-center pt-2">
                 <h4 class="font-weight-bold text-verde">Nota Estados Financieros</h4>
-                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta nota a sus estados financieros al 31 de diciembre de 2023</h6>
+                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta nota a sus estados financieros al 31 de diciembre de 2024</h6>
                 <object data="files/notaEstados2024.pdf" type="application/pdf" width="100%" height="600px">
                     Descargue el documento <a href="files/notaEstados2024.pdf">aquí. <i class="far fa-file-pdf"></i></a>
                 </object>
@@ -483,7 +483,7 @@
         <div id="notaEfectivo-content" style="display:none;">
             <div class="container text-center pt-2">
                 <h4 class="font-weight-bold text-verde">Estado Flujo Efectivo</h4>
-                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta sus estados de efectivo al 31 de diciembre de 2023.</h6>
+                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta sus estados de efectivo al 31 de diciembre de 2024.</h6>
                 <object data="files/estadoEfectivo2024.pdf" type="application/pdf" width="100%" height="600px">
                     Descargue el documento <a href="files/estadoEfectivo2024.pdf">aquí. <i class="far fa-file-pdf"></i></a>
                 </object>
@@ -493,7 +493,7 @@
         <div id="certificadoEF-content" style="display:none;">
             <div class="container text-center pt-2">
                 <h4 class="font-weight-bold text-verde">Certificación Estados Financieros</h4>
-                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta Certificación Estados Financieros a corte 31/12/2023 por el contador público.</h6>
+                <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta Certificación Estados Financieros a corte 31/12/2024 por el contador público.</h6>
                 <object data="files/certificadoEF2024.pdf" type="application/pdf" width="100%" height="600px">
                     Descargue el documento <a href="files/certificadoEF2024.pdf">aquí. <i class="far fa-file-pdf"></i></a>
                 </object>
@@ -504,8 +504,8 @@
             <div class="container text-center pt-2">
                 <h4 class="font-weight-bold text-verde">Certificación Estados Financieros</h4>
                 <h6 class="font-weight-bold"><span class="text-primary font-weight-normal text-justify">La Asociación de Habitantes del Barrio Nuevo Armero Primera Etapa <strong>“ASOBANAR”</strong>, presenta Certificado de los antecendetes judiciales y declaración de caducidad de contratos estatales Numeral 3 Art. 364-3 E.T.</h6>
-                <object data="files/certificadoAntecedentes2023.pdf" type="application/pdf" width="100%" height="600px">
-                    Descargue el documento <a href="files/certificadoAntecedentes2023.pdf">aquí. <i class="far fa-file-pdf"></i></a>
+                <object data="files/certificadoAntecedentes2024.pdf" type="application/pdf" width="100%" height="600px">
+                    Descargue el documento <a href="files/certificadoAntecedentes2024.pdf">aquí. <i class="far fa-file-pdf"></i></a>
                 </object>
             </div>
         </div>
@@ -517,7 +517,7 @@
                 <div class="row reservados justify-content-sm-between align-items-sm-center">
                     <div class="col-12">
                         <img class="mb-2" src="img/logo.png" alt="" width="120" height="120">
-                        <p>©2024. Todos los derechos reservados. <hr>Desarrollado por <a href="https://twitter.com/jhon1946">@jhon1946</a></p>
+                        <p>©2025. Todos los derechos reservados. <hr>Desarrollado por <a href="https://twitter.com/jhon1946">@jhon1946</a></p>
                     </div>
 
                     <!-- <div class="col-12 col-sm-auto">
